--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: NVT
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Normalization visualisation
 Version: 0.1
 Date: 2015-11-24
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Thomas Eder
+Maintainer: Thomas Eder <Thomas.Eder@lbicr.lbg.ac.at>
+Description: This tool normalizes gene expression data from two sample and plots the results as MA-plots, indicating the previously set housekeeping genes and calculating their pearson correlation.
+License:
 LazyData: TRUE
 RoxygenNote: 5.0.1
