--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,9 @@ Date: 2015-11-24
 Author: Thomas Eder
 Maintainer: Thomas Eder <Thomas.Eder@lbicr.lbg.ac.at>
 Description: This tool normalizes gene expression data from two sample and plots the results as MA-plots, indicating the previously set housekeeping genes and calculating their pearson correlation.
-License: GNU General Public License, version 3.0 (GPL-3.0)
+License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Suggests:
-Requires: limma, NOISeq, DESeq2
+Depends: R (>= 3.1.0)
+Requires: limma, NOISeq, DESeq
+LazyData: true
