Updated correlation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(NVTadvancedplot)
 export(NVTinit)
 export(NVTloadgff)
+export(NVTmae)
 export(NVTnormalize)
 export(NVTpearson)
 export(NVTplot)
+export(NVTrmsd)
 export(NVTtestall)
 exportClasses(NVTdata)
